fix destination-snowflake build for jdk17